# S.W2.5-manager

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  ReadmeJp.txt  Release note.txt  build process.txt  conver_shiftjis_to_utf8.sh  readme.txt  test.json
include/: Tab1.h  Tab2.h  pawnline.h  stdafx.h  utility.h
src/: Tab1.cpp  Tab2.cpp  main.cpp  pawnline.cpp  utility.cpp
